<resources>
    <string name="app_name">Challenge</string>
    <string name="buttonEntrar">Entrar</string>
    <string name="buttonCadastrar">Cadastrar-se</string>
    <string name="name">Nome</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="loren">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="email">Email</string>
    <string name="registrarionNumber">Numero de CRO</string>
    <string name="senha">Senha</string>
    <string name="consultationValue">Valor da consulta (R$)</string>
    <string name="description">Descrição (Opcional)</string>
    <string name="nome">nome</string>
    <string name="consultationDate">Data da consulta</string>
    <string name="patient">Paciente</string>
    <string name="newConsultation">Nova Consulta</string>
    <string name="addConsultationTextButton">Criar</string>
    <string name="specialty">Especialidade</string>
    <string name="registerToLoginPhrase"><u>Já possuo uma conta Aletheia. Fazer login.</u></string>
    <string name="loginToRegisterPhrase"><u>Não possuo uma conta Aletheia. Cadastrar-se.</u></string>
    <string name="birthday">Data de nascimento:</string>
    <string name="gender">Genero:</string>
    <string name="detailsConsultationDate">Data da consulta:</string>
    <string name="detailsConsultationValue">Valor da consulta:</string>
    <string name="consultationFrequency">Frequência de consulta:</string>
    <string name="riskStatus">Status de risco:</string>
    <string name="consultationDescription">Descrição:</string>
    <string name="rocky">Você não vai acreditar. Mas você cabia aqui. Eu segurava você e dizia “Esse menino vai ser o melhor menino do mundo. Esse menino vai ser melhor do que qualquer um que conhecemos.”. E você cresceu bom, maravilhoso.</string>
    <string name="profileSpecialty">Especialidade:</string>
    <string name="profileRegisterNumber">Número de CRO:</string>
</resources>