<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.application.RegisterActivity">

    <TextView
        android:id="@+id/registerNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/name"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/registerNameEditText"
        app:layout_constraintStart_toStartOf="@+id/registerNameEditText" />

    <EditText
        android:id="@+id/registerNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/gray"
        android:ems="10"
        android:inputType="text"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aletheiaImageView" />

    <TextView
        android:id="@+id/registerSpecialtyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/specialty"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/registerSpecialtyEditText"
        app:layout_constraintStart_toStartOf="@+id/registerSpecialtyEditText" />

    <EditText
        android:id="@+id/registerSpecialtyEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/gray"
        android:ems="10"
        android:inputType="text"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerNameEditText" />


    <TextView
        android:id="@+id/registerRegistrationNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/registrarionNumber"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/registerRegistrationNumberEditText"
        app:layout_constraintStart_toStartOf="@+id/registerRegistrationNumberEditText" />

    <EditText
        android:id="@+id/registerRegistrationNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/gray"
        android:ems="10"
        android:inputType="text"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerSpecialtyEditText" />

    <TextView
        android:id="@+id/registerPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/senha"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/registerPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/registerPasswordEditText" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/gray"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerRegistrationNumberEditText" />



    <ImageView
        android:id="@+id/aletheiaImageView"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_004aad_1_removebg_preview" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/inter_bold"
        android:paddingStart="8dp"
        android:layout_marginTop="50dp"
        android:paddingEnd="8dp"
        android:text="@string/buttonCadastrar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText" />

    <TextView
        android:id="@+id/registerToLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/registerToLoginPhrase"
        android:textColor="@color/blue"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />


</androidx.constraintlayout.widget.ConstraintLayout>